# sandbox-python

./: README.md  fizzbuzz.py  hello.py
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
excel/: README.md  pyproject.toml
excel/src/excel/: __init__.py
hello-flask/: Makefile  README.md  pyproject.toml
hello-flask/src/: main.py
hello-flask/src/hello_flask/: __init__.py
hello-rye/: README.md  pyproject.toml
hello-rye/src/: main.py  test.py
hello-rye/src/hello_rye/: __init__.py
multiprocess/: Makefile  README.md  pyproject.toml
multiprocess/src/: main.py
multiprocess/src/multiprocess/: __init__.py
