[project]
name = "multiprocess"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Shota Narisaka", email = "shootacean@gmail.com" }
]
dependencies = [
    "ruff~=0.0.272",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
select = ["ALL"]
